--- a/frontuiwithreact/src/components/Information/TechEditInformation.css
+++ b/frontuiwithreact/src/components/Information/TechEditInformation.css
@@ -24,11 +24,19 @@
 }
 .edit__tech__info__editIcon{
     position: absolute;
-    right: 18%;
-    top: 80%;
-    transform: translateY(-80%);
+    right: 8px; 
+    bottom: 10px;
     color: #FFFFFF;
     font-size: 20px;
+    cursor: pointer;
+}
+.edit__tech__info__editIcon__input{
+    position: absolute;
+    right: 70px;
+    bottom: 20px;
+    color: #FFFFFF;
+    font-size: 20px;
+    cursor: pointer;
 }
 .mini__info__title__edit{
     text-align: left;
@@ -37,6 +45,7 @@
 }
 .edit__tech__info__p{
     display: inline-block;  
+    position: relative;
     padding: 3px 40px 3px 10px;
     width: 286px;
     background-color: #1B3B67;
@@ -48,4 +57,54 @@
     line-height: 29px;
     color: #FFFFFF;
     margin: 0;
+}
+.usnm__rol__edt{
+    background-color: #1B3B67;
+    border-radius: 6px;
+    width: 286px;
+    height: 89px;
+    position: relative;
+    margin-bottom: 10px;
+}
+.usnm__rol__edt__icon{
+    position: absolute;
+    top: 30px;
+    right: 10px;
+    color: #FFFFFF;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.txt__edit{
+    position: absolute;
+    display: block;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    z-index: 10;
+    color: #FFFFFF;
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    width: 100%;
+    text-align: center;
+}
+.edit__tech__profile__editIcon{
+    font-size: 20px;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+.profile__editIcon__wrapper{
+    position: absolute;
+    right: 15px;
+    bottom: 15px;
+    background: #1B3B67;
+    border-radius: 50%;
+    width: 48.81px;
+    height: 48px;
+    text-align: center;
+    text-align: center;
+    line-height: 42px;
 }
